# thead-u-boot

./: BUILD.bazel  Makefile  Makefile.host_arch  build.config.common  build.config.lpi4a  build.config.qemu.riscv64  build.config.riscv64  lpi4a_aosp14.fragment
arch/riscv/: config.mk
arch/riscv/lib/: bootm.c  reset.c
board/thead/light-c910/: spl.c
board/thead/light-c910/lpddr4/src/: lpddr4_init.c
examples/standalone/: Makefile
scripts/: Makefile.build
